--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility "1.8"
-        targetCompatibility "1.8"
+        sourceCompatibility JavaVersion.VERSION_1_8.toString()
+        targetCompatibility JavaVersion.VERSION_1_8.toString()
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildFeatures {
@@ -73,4 +73,6 @@ dependencies {
     implementation "com.intuit.sdp:sdp-android:1.1.0"
 
     implementation "androidx.multidex:multidex:2.0.1"
+    // For developers using AndroidX in their applications
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
