--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,8 @@ buildscript {
         maven {url 'https://storage.googleapis.com/r8-releases/raw'}
     }
     dependencies {
-        //noinspection AndroidGradlePluginVersion
         classpath 'com.android.tools.build:gradle:7.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
