--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,14 @@ plugins {
 
 android {
 
-    compileSdk 31
+    compileSdk 32
+    buildToolsVersion '30.0.3'
     ndkVersion '22.1.7171670'
 
     defaultConfig {
         applicationId "com.example.esportslogomaker"
         minSdk 21
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -27,29 +28,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8.toString()
-        targetCompatibility JavaVersion.VERSION_1_8.toString()
+        sourceCompatibility "1.8"
+        targetCompatibility "1.8"
     }
 
+
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = "1.8"
     }
 
     buildFeatures {
         viewBinding true
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    //noinspection GradleDependency
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     def appcompat_version = "1.4.2"
 
@@ -63,12 +62,12 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-    implementation "com.github.bumptech.glide:glide:4.12.0"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     implementation "commons-io:commons-io:2.8.0"
-    implementation "com.google.code.gson:gson:2.8.9"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.0"
+    implementation "com.google.code.gson:gson:2.9.0"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 
     implementation "com.intuit.sdp:sdp-android:1.1.0"
 
