--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 
 android {
 
-    compileSdk 32
+    compileSdk 31
     ndkVersion '22.1.7171670'
 
     defaultConfig {
         applicationId "com.example.esportslogomaker"
         minSdk 21
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -48,7 +48,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.core:core-ktx:1.8.0"
 
     def appcompat_version = "1.4.2"
 
@@ -62,16 +62,18 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation "com.github.bumptech.glide:glide:4.13.2"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.13.2"
 
     implementation "commons-io:commons-io:2.8.0"
     implementation "com.google.code.gson:gson:2.9.0"
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.3"
 
     implementation "com.intuit.sdp:sdp-android:1.1.0"
 
     implementation "androidx.multidex:multidex:2.0.1"
     // For developers using AndroidX in their applications
-    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation "pub.devrel:easypermissions:3.0.0"
+
+    implementation "com.google.android.play:core:1.10.3"
 }
