--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     ndkVersion '22.1.7171670'
 
     defaultConfig {
-        applicationId "com.example.esportslogomaker"
+        applicationId "com.esportlogo.gaminglogo"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -28,13 +28,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility "1.8"
-        targetCompatibility "1.8"
+        sourceCompatibility "11"
+        targetCompatibility "11"
     }
 
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 
     buildFeatures {
